# qec-surface-code-simulation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
experiments/: compare_decoders.py  compare_lattice.py  distance_scaling.py  logical_failure_stim.py
experiments/reference/: compare_stim_checkerboard.py  qiskit_decoder_strategy.py
experiments/stim/: compare_lattices.py  distance_scaling.py  runtime_benchmark.py  threshold.py
results/reference/qiskit_decoder_strategy/: results.csv
results/stim/runtime_benchmark/: runtime.csv
src/qec/: geometry.py  visualization.py
src/qec/analysis/: io.py  threshold.py
src/qec/backends/: base.py  geometry.py  simulation.py
src/qec/decoders/: __init__.py  networkx.py  pymatching.py  syndrome.py
src/qec/visualization/: __init__.py  common.py  comparison.py  logical_failure.py  runtime.py  threshold.py
tests/: test_geometry.py
tests/analysis/: test_io.py  test_threshold.py
tests/backends/: test_geometry.py  test_simulation.py
tests/backends/planar/: test_geometry.py  test_unrotated_surface_code.py
tests/backends/qiskit/: test_backend.py  test_circuit.py  test_engine.py  test_noise.py  test_simulation.py  test_syndrome.py
tests/backends/stim/: test_backend.py  test_base.py  test_geometry.py  test_rotated.py  test_rotated_surface_code.py  test_simulation.py  test_stim_surface_code.py  test_surface_code.py  test_unrotated.py
tests/decoders/: test_mwpm.py  test_networkx.py  test_pymatching.py  test_simulation.py  test_syndrome.py
tests/visualization/: test_visualization.py
(+70 files in other folders)
